# data-loader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data_loader/: main.py
data_loader/load/: load_base.py  load_duckdb.py  load_parquet.py  load_sqlite.py
data_loader/logger/: logging_utilties.py
data_loader/models/: models_base.py  models_test.py
data_loader/tests/: test_universal_loader.py
data_loader/utilities/: loading.py
models/: purchases_model.py
sample_configs/: sample_config.toml  set1_customer.toml  set1_purchases.toml  set2_customer.toml  set2_purchases.toml
sample_data/set1/: purchases_set1.csv
sample_models/: customer_model.py  purchases_model.py  set1_customer_address_input.py  set1_purchases_input.py  set2_customer_input.py  set2_purchases_input.py
sample_projects/set1/: set1_customer.toml  set1_customer_transformer.py  set1_purchases.toml
sample_projects/set2/: set2_customer.toml  set2_customer_transformer.py  set2_purchases.toml
sample_transformers/: set1_customer_transformer.py  set2_customer_transformer.py  set2_purchases_transformer.py
samples/dataset1/: customer_address_set1.csv  customer_details_set1.csv  demographics_set1.csv  purchases_set1.csv
samples/dataset2/: customers_set2.csv  purchases_set2.csv
src/: main.py  requirements.txt
src/config/: pipeline_config_io.py
src/data_loader/: data_writer.py  (+6 more)
tests/: test_data_writer.py  test_file_readers.py  test_main.py  test_object_loader.py  test_pipeline_config_io.py  test_read_utilities.py  test_transformer_loader.py  test_universal_loader.py
(+41 files in other folders)
