[project]
name = "data-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "black==25.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "cramjam==2.11.0",
    "duckdb==1.4.1",
    "et-xmlfile==2.0.0",
    "fastparquet==2024.11.0",
    "fsspec==2025.9.0",
    "iniconfig==2.3.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandera==0.26.1",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "pyarrow==21.0.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.2.0",
    "pytz==2025.2",
    "ruff==0.14.1",
    "six==1.17.0",
    "toml==0.10.2",
    "typeguard==4.4.4",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
]
